--- a/userChrome.css
+++ b/userChrome.css
@@ -1,154 +1,128 @@
-/* Firefox Quantum userChrome.css tweaks ************************************************/
-/* Github: https://github.com/aris-t2/customcssforfx ************************************/
-/****************************************************************************************/
-
-/****************************************************************************************/
-/* multirow / multiple tab lines - modified for CustomCSSforFx **************************/
-/* all credits go to the original authors: **********************************************/
-/* https://www.reddit.com/r/FirefoxCSS/comments/7dclp7/multirow_tabs_in_ff57/ ***********/
-/* https://github.com/MrOtherGuy/firefox-csshacks/blob/master/chrome/multi-row_tabs.css */
-/****************************************************************************************/
-
-
-/* NOTE  ********************************************************************************/
-/* Variables are set inside '.\config\' folders CSS files, if complete package is used! */
-
-:root{
-  --tabs-lines: 3;
-  --tab_min_width_mlt: 140px;
-  --tab_max_width_mlt: 140px;
-  --tab-min-height_mlt: var(--tab-min-height,32px); /* set own value here, if used without configuration files */
+/* Global UI font
+ Requires Google's Noto Sans font to be installed
+ Install either from your package manager or download and
+   install from Google:
+   https://fonts.google.com/specimen/Noto+Sans
+*/
+* {
+  font-family: Noto Sans !important;
+  font-style: Regular !important;
+  font-size: 11pt !important;
 }
+
+/* Bookmark font */
+#personal-bookmarks .bookmark-item menupopup * {
+  font-family: Noto Sans !important;
+  font-style: Regular !important;
+  font-size: 14pt !important;
+}
+
+/* Remove URL bar zoom button */
+#urlbar-zoom-button {
+  display: none !important
+}
+
+/* Remove tab blur
+    https://github.com/Aris-t2/CustomCSSforFx/blob/master/classic/css/tabs/tab_titles_remove_blur.css
+*/
+.tab-label-container[textoverflow]:not([pinned]) {
+  mask-image: unset !important;
+}
+
+/* Active Tab Background Color
+    http://forums.mozillazine.org/viewtopic.php?f=38&t=3048845
+*/
+.tab-content[selected="true"] {
+  background: rgba(65, 85, 145, 0.4) !important;
+}
+
+
+/* Makes tabs to appear on multiple lines */
+/* Tab reordering will not work and can't be made to work */
+/* You can use multi-row_tabs_window_control_patch.css to move window controls to nav-bar*/
+
+/* It's recommended to move tabs new-tab-button outside tabs toolbar */
+
+/* Change the --multirow-n-rows to change maximum number of rows before the rows will start to scroll  */
+/* This maximum visible rows won't work before Fx66 */
+/* So this setting does nothing on Fx65 and all tab rows will be shown */
+:root{
+    --multirow-n-rows: 5;
+    --multirow-tab-min-width: 140px;
+    --multirow-tab-dynamic-width: 0; /* Change to 0 for fixed-width tabs using the above width. */
+}
+
+/* Scrollbar can't be clicked but the rows can be scrolled with mouse wheel */
+/* Uncomment the next line if you want to be able to use the scrollbar with mouse clicks */
+
+#tabbrowser-arrowscrollbox{ -moz-window-dragging: no-drag }
+
+/* Uncommenting the above makes you unable to drag the window from empty space in the tab strip but normal draggable spaces will continue to work */
 
 #tabbrowser-tabs{
   min-height: unset !important;
-  padding-inline-start: 0px !important;
+  padding-inline-start: 0px !important
 }
 
-/* Selectors for Firefox 71+ */
-/* These are not tabs toolbar specific but horizontal scrollbox isn't used elsewhere, except in bookmarks toolbar but there it doesn't have [part] attribute since it's not in shadow-root */
 @-moz-document url(chrome://browser/content/browser.xhtml){
-  .scrollbutton-up[orient="horizontal"][part]~spacer,
-  .scrollbutton-up[orient="horizontal"][part],
-  .scrollbutton-down[orient="horizontal"][part]{
-	  display: none !important;
-  }
+  #scrollbutton-up~spacer,
+  #scrollbutton-up,
+  #scrollbutton-down{ display: var(--scrollbutton-display-model,initial) }
 
   scrollbox[part][orient="horizontal"]{
     display: flex;
     flex-wrap: wrap;
     overflow-y: auto;
-    max-height: calc(var(--tab-min-height_mlt) * var(--tabs-lines));
+    max-height: calc(var(--tab-min-height) * var(--multirow-n-rows));
+    scrollbar-color: currentColor transparent;
+    scrollbar-width: thin;
   }
 }
 
-/* Test for Firefox > 66 */
-@supports (inset-block:auto){
-  #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox{
-    display: flex;
-    flex-wrap: wrap;
-    overflow-y: auto;
-    max-height: calc(var(--tab-min-height_mlt) * var(--tabs-lines));
-  }
-  #tabbrowser-tabs > .tabbrowser-arrowscrollbox {
-    overflow: -moz-hidden-unscrollable;
-    display: block;
-	/*margin-bottom:-1px !important;*/
-  }
-  
-  :-moz-any(.tabs-newtab-button,#tabs-newtab-button) {
-    height: var(--tab-min-height_mlt) !important;
-  }
+#tabbrowser-arrowscrollbox{
+  overflow: -moz-hidden-unscrollable;
+  display: block;
+  --scrollbutton-display-model: none;
 }
 
-/* Test for Firefox < 66 */
-@supports not (inset-block:auto){
-  #tabbrowser-tabs > .tabbrowser-arrowscrollbox{
-    min-height: unset !important;
-  }
-  #tabbrowser-tabs .scrollbox-innerbox{
-    display: flex;
-    flex-wrap: wrap;
-  }
-  #tabbrowser-tabs .arrowscrollbox-scrollbox {
-    overflow: -moz-hidden-unscrollable;
-    display: block;
-  }
-}
-
-.tabbrowser-tab{
-  height: var(--tab-min-height_mlt);
-}
+.tabbrowser-tab{ height: var(--tab-min-height); }
 
 #tabbrowser-tabs .tabbrowser-tab[pinned]{
   position: static !important;
   margin-inline-start: 0px !important;
 }
 
-.tabbrowser-tab[fadein]:not([pinned]) {
-  flex-grow: 1;
-  min-width: var(--tab_min_width_mlt) !important;
-  max-width: var(--tab_max_width_mlt) !important;
+.tabbrowser-tab[fadein]:not([pinned]){
+  min-width: var(--multirow-tab-min-width) !important;
+  flex-grow: var(--multirow-tab-dynamic-width);
+  /*
+  Uncomment to enable full-width tabs, also makes tab dragging a tiny bit more sensible
+  Don't set to none or you'll see errors in console when closing tabs
+  */
+  /*max-width: 100vw !important;*/
 }
 
-.tabbrowser-tab > stack{
-  width: 100%;
-  height: 100%;
-}
+.tabbrowser-tab > stack{ width: 100%; height: 100% }
 
-#tabbrowser-tabs .scrollbutton-up,
-#tabbrowser-tabs .scrollbutton-down,
 #alltabs-button,
 :root:not([customizing]) #TabsToolbar #new-tab-button,
 #tabbrowser-tabs spacer,
-.tabbrowser-tab::after{
-  display: none !important;
-}
+.tabbrowser-tab::after{ display: none !important }
 
-#tabbrowser-tabs[overflow="true"] > .tabbrowser-arrowscrollbox > :-moz-any(.tabs-newtab-button,#tabs-newtab-button),
-#tabbrowser-tabs:not([hasadjacentnewtabbutton]) > .tabbrowser-arrowscrollbox > :-moz-any(.tabs-newtab-button,#tabs-newtab-button),
-#TabsToolbar[customizing="true"] #tabbrowser-tabs > .tabbrowser-arrowscrollbox > :-moz-any(.tabs-newtab-button,#tabs-newtab-button) {
-  visibility: hidden !important;
-}
 
-/* hide private window indicator, window controls and titlebar placeholders */
-#main-window[tabsintitlebar] #TabsToolbar .private-browsing-indicator,
-#main-window[tabsintitlebar] #TabsToolbar #window-controls,
-#main-window[tabsintitlebar] #TabsToolbar .titlebar-spacer[type="pre-tabs"],
-#main-window[tabsintitlebar] #TabsToolbar .titlebar-spacer[type="post-tabs"] {
-  display: none !important;
-}
-#TabsToolbar .titlebar-placeholder[type="pre-tabs"],
-#TabsToolbar .titlebar-placeholder[type="post-tabs"] {
-  opacity: 0 !important;
-}
-
-/* hide tab borders set by Firefox 58+ to solve 'blank space below tabs' issue */
-.tabbrowser-tab::after,
-.tabbrowser-tab::before {
-  border-left: unset !important;
-  border-image: unset !important;
-  border-image-slice: unset !important;
-  border: 0 !important;
-}
-
-/* Fx66+ tab close fix */
+/* Hide tab close button *******************************/
+/* Github: https://github.com/aris-t2/customcssforfx ************************************/
+/****************************************************************************************/
 #TabsToolbar #tabbrowser-tabs .tabbrowser-tab:not([pinned]) .tab-close-button {
-  visibility: visible !important;
+  visibility: hidden !important;
   display: block !important;
+  opacity: 0 !important;
+  -moz-margin-end: -16px !important;
 }
+
 #TabsToolbar #tabbrowser-tabs .tabbrowser-tab[pinned] .tab-close-button {
   visibility: hidden !important;
   display: block !important;
+  opacity: 0 !important;
   -moz-margin-start: -18px !important;
-}
-
-/* fix scrollbar */
-#main-window[tabsintitlebar] #tabbrowser-tabs {
-  -moz-window-dragging: no-drag !important;
-}
-
-/*lw theme fix */
-#main-window[style*='--lwt-header-image']:-moz-lwtheme {
-  background-repeat: repeat-y !important;
 }
